--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
   </header>
   <main class="container-fluid">
     <div class="row justify-content-center text-center">
-      <div class="col-3 card-main">
+      <div class="col-4 card-main">
         <h4 class="text-light">LEVEL: <span class="text-success">1</span></h4>
       </div>
       <div class="col-4 card-main">
         <h4 class="text-light">JAEGER HEALTH: <span class="text-danger">100%</span></h4>
       </div>
-      <div class="col-3 card-main">
+      <div class="col-4 card-main">
         <h4 class="text-light">KAIJU CORES: <span class="text-warning">0</span></h4>
       </div>
     </div>
@@ -66,12 +66,11 @@
                 Cores</span></b></h5>
         </div>
       </div>
-      <div class="col-6 m-5">
-        <h1 class="offset-5 text-light mt-5 kaijuhealthbar">KAIJU HEALTH: <span class="text-danger">100%</span></h1>
+      <div class="d-flex justify-content-center align-items-center col-8 target-frame">
         <img src="kaijutest.png" class="kaiju img-fluid" alt="" srcset="">
       </div>
-      <div class="col-2 mt-5 statusScreen">
-        <div class="card-status p-1 my-5 card-shelf p-4">
+      <div class="col-2  statusScreen p-0">
+        <div class="card-status card-shelf p-4">
           <h4 class="text-light text-left py-2">STATUS</h4>
           <p class="text-light text-left"><b>Auto-Missle Launcher(s)</b>: <span class="text-secondary">0</span></p>
           <p class="text-light text-left"><b>Targeting Computer Upgrade(s)</b>: <span class="text-secondary">0</span>
@@ -79,9 +78,27 @@
           <p class="text-light text-left"><b>Reactor Core Upgrade(s)</b>: <span class="text-secondary">0</span></p>
           <p class="text-light text-left"><b>Maintence Received</b>: <span class="text-secondary">0</span></p>
         </div>
-        <div class="radaroverlay">
+        <div class="radaroverlay card-shelf">
           <img src="dangerradar.gif" class="gipsydangerblueprint" alt="" srcset="">
         </div>
+        <div class="polotoverlay card-shelf">
+          <h2 class="text-light">Neural Handshake: <span class="text-success">Success</span></h2>
+          <img src="doug.png" class="pilot" alt="" srcset="">
+        </div>
+      </div>
+    </div>
+    <div class="row text-center">
+      <div class="col-4 audio-controls autoplay card-shelf">
+        <audio controls autoplay>
+          <source src="PACIFIC RIM THEME (80s REMIX) - Atomic Shrine Maiden.mp3" type="audio/mpeg">
+          Your browser does not support music.
+        </audio>
+      </div>
+      <div class="col-4 kaiju-health card-shelf">
+        <h4 class="text-light">KAIJU HEALTH: <span class="text-danger">100%</span></h4>
+      </div>
+      <div class="col-4 emergency-sword card-shelf">
+        <h2 class="text-light">Emergency Sword Protocol: <span class="text-success">Available</span></h2>
       </div>
     </div>
   </main>
